@@ -1,3 +1,15 @@
+2014-08-13  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* parser.c (cp_parser_elaborated_type_specifier): Handle
+	specially cp_parser_template_id returning a BASELINK.
+
+2014-08-13  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* parser.c (cp_parser_diagnose_invalid_type_name,
+	cp_parser_make_typename_type): Remove scope parameter.
+	(cp_parser_parse_and_diagnose_invalid_type_name,
+	cp_parser_elaborated_type_specifier): Adjust calls.
+
 2014-08-12  Ville Voutilainen  <ville.voutilainen@gmail.com>
 
 	Reject virt-specifiers on friends and member templates
